--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,10 @@ dependencies:
   firebase_core: ^1.17.1
   firebase_auth: ^3.3.19
   firebase_database: ^9.0.15
+  google_maps_flutter: ^2.1.8
+  geolocator: ^8.2.1
+  http: ^0.13.4
+  provider: ^6.0.3
 
 dev_dependencies:
   flutter_test:
